2009-02-28  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline:
	2008-12-02  Martin Jambor  <mjambor@suse.cz>
	
	PR middle-end/37861
	* tree-ssa-forwprop.c 
	(forward_propagate_addr_into_variable_array_index): Check that the
	offset is not computed from a MULT_EXPR if element size is one.

2009-02-28  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-02-26  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.h (alpha_expand_mov): Return false if
	force_const_mem returns NULL_RTX.

2009-02-26  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-02-02  Jakub Jelinek  <jakub@redhat.com>

	PR inline-asm/39058
	* recog.h (asm_operand_ok): Add constraints argument.
	* recog.c (asm_operand_ok): Likewise.  If it is set, for digits
	recurse on matching constraint.
	(check_asm_operands): Pass constraints as 3rd argument to
	asm_operand_ok.  Don't look up matching constraint here.
	* stmt.c (expand_asm_operands): Pass NULL as 3rd argument
	to asm_operand_ok.

2009-02-25  Janis Johnson  <janis187@us.ibm.com>

	Backport from mainline:
	2008-10-29  Joseph Myers  <joseph@codesourcery.com>

	PR middle-end/36578
	* convert.c (convert_to_real): Do not optimize conversions of
	binary arithmetic operations between binary and decimal
	floating-point types.  Consider mode of target type in determining
	decimal type for arithmetic.  Unless
	flag_unsafe_math_optimizations, do not optimize binary conversions
	where this may change rounding behavior.
	* real.c (real_can_shorten_arithmetic): New.
	* real.h (real_can_shorten_arithmetic): Declare.

2009-02-21  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-02-20  Jaka Mocnik  <jaka@xlab.si>

	* calls.c (emit_library_call_value_1): Use slot_offset instead of
	offset when calculating bounds for indexing stack_usage_map.  Fixes
	a buffer overflow with certain target setups.

2009-02-20  Steve Ellcey  <sje@cup.hp.com>

	PR target/38056